fix: preserve duplicate compiler arguments
Read compiler argument entries directly instead of converting them to a map, which discarded repeated options such as multiple --add-reads declarations.

Extend the multi-module JPMS invoker test to verify that both explicit and Maven-generated --add-reads arguments are captured.